[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Boss/Rozpierdalacz_3.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Boss.gd" type="Script" id=2]
[ext_resource path="res://Assets/Boss/Rozpierdalacz_2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Boss/Rozpierdalacz_1.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.5, 84 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 31.75, 85 )

[sub_resource type="Animation" id=6]
resource_name = "Stun"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walk"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="Boss" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 4
collision_mask = 19
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -12, 8 )
scale = Vector2( 0.9, 0.9 )
frames = SubResource( 4 )
animation = "Walk"

[node name="LookingForPlayerRight" type="RayCast2D" parent="Sprite"]
position = Vector2( 104.444, -8.88889 )
enabled = true
cast_to = Vector2( 600, 0 )
collision_mask = 2

[node name="LookingForPlayerLeft" type="RayCast2D" parent="Sprite"]
position = Vector2( -2.22222, -8.88889 )
enabled = true
cast_to = Vector2( -600, 0 )
collision_mask = 2

[node name="WallDetectors" type="Node2D" parent="Sprite"]
position = Vector2( 55.1111, 2.11111 )

[node name="RayLeft" type="RayCast2D" parent="Sprite/WallDetectors"]
position = Vector2( -55.1111, -28.7778 )
enabled = true
cast_to = Vector2( -100, 0 )
collision_mask = 17
collide_with_areas = true
collide_with_bodies = false

[node name="RayRight" type="RayCast2D" parent="Sprite/WallDetectors"]
position = Vector2( 49.3333, -26.5556 )
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 17
collide_with_areas = true
collide_with_bodies = false

[node name="Attack" type="Area2D" parent="."]
position = Vector2( 38, 2 )
collision_layer = 0
collision_mask = 2

[node name="CollisionLeft" type="CollisionShape2D" parent="Attack"]
position = Vector2( -34.5, 0 )
shape = SubResource( 2 )

[node name="CollisionRight" type="CollisionShape2D" parent="Attack"]
position = Vector2( 32, 0 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 40, 4 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Stun = SubResource( 6 )
anims/Walk = SubResource( 5 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
